# university

./: CMakeLists.txt  matrix_ex_tests.c  matrix_test.c  string_test.c  test.c  vector_test.c
SecondSem/: CMakeLists.txt  ls  main.c  matrix_ex_tests.c  string_test.c  test.c  vector_test.c
SecondSem/libs/: CMakeLists.txt
SecondSem/libs/algorithms/array/: array.c
SecondSem/libs/data_struct/: CMakeLists.txt
SecondSem/libs/data_struct/bitset/: bitset.c  bitset.h
SecondSem/libs/data_struct/matrix/: matrix.c  matrix_ex.c
SecondSem/libs/data_struct/ordered_set/: ordered_set.h
SecondSem/libs/data_struct/unordered_set/: unordered_set.c
SecondSem/libs/data_struct/vector/: vector.c
SecondSem/libs/file_library/: CMakeLists.txt  file_func.c
SecondSem/libs/file_library/tasks/: func_ex.c  task1.txt  task10.txt  task10last.txt  task10ord.txt  task2input.txt  task2output.txt  task3.txt  task4input.txt  task4output.txt  task5input.txt  task5output.txt  task6.txt  task7.txt  task8.txt  task9.txt  task9input.txt
SecondSem/libs/streams/: CMakeLists.txt  streams_lib.c
SecondSem/libs/streams/tasks/: streams_ex.c
SecondSem/libs/string/task/: string_.c  string_.h
algorithms/: CMakeLists.txt
algorithms/array/: array.c  array.h
data_struct/: CMakeLists.txt
data_struct/bitset/: bitset.c
data_struct/unordered_set/: unordered_set.h
data_struct/vector/: vector.c
libs/: CMakeLists.txt
libs/algorithms/array/: array.c
libs/data_struct/: CMakeLists.txt
libs/data_struct/matrix/: matrix.c  matrix_ex.c
libs/data_struct/ordered_set/: ordered_set.c
libs/data_struct/vector/: vector.c
libs/data_struct/vector_void/: vector_void.c  vector_void.h
libs/string/: CMakeLists.txt
libs/string/task/: string_.c  string_.h
